[gd_scene load_steps=6 format=3 uid="uid://c5hw6hqqo7vl1"]

[ext_resource type="Script" path="res://Scripts/bobber.gd" id="1_ohths"]
[ext_resource type="Texture2D" uid="uid://jajt2jp7r7qy" path="res://Assets/bobber.png" id="2_e6txy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_okh5p"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e822y"]
radius = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iy6hr"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 2.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 98, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 2.0
color = Color(0.0627451, 0.32549, 1, 1)

[node name="Bobber" type="RigidBody2D"]
gravity_scale = 0.2
script = ExtResource("1_ohths")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_e6txy")

[node name="CollisionboxForError" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_okh5p")
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="WaterCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCheck"]
shape = SubResource("CircleShape2D_e822y")

[node name="FishBiteTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FishBiteParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_iy6hr")

[connection signal="area_entered" from="WaterCheck" to="." method="_on_water_check_area_entered"]
[connection signal="area_exited" from="WaterCheck" to="." method="_on_water_check_area_exited"]
